--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "gulp": "^3.8.7",
     "gulp-connect": "^2.0.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp-clean": "^0.3.1",
+    "gulp-minify-css": "^0.3.7",
+    "gulp-minify-html": "^0.1.4",
+    "gulp-rev": "^1.1.0",
+    "gulp-uglify": "^0.3.2",
+    "gulp-usemin": "^0.3.8"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
